error fixed: negative margin was covering up part of the data

--- a/src/components/FreqDisplay.css
+++ b/src/components/FreqDisplay.css
@@ -1,3 +1,4 @@
+/* text: SIGHTINGS FREQUENCY is in body */
 .componentBody{
     color: gray; 
     width: 100%; 
@@ -7,16 +8,18 @@
     overflow: visible;
 }
 
+
 .dataContainer{
     margin-top: -20px;
     overflow-y: scroll;
     height: 45vh; 
   
 }
-
+/* .map data in this container */
 .displayData{
     justify-content: center;
-    margin-top: -50px; 
+    margin-top: -30px; 
+    margin-bottom: -50px;
     font-size: 20px;
     color: black; 
     display: flex;
